--- a/settings_local.py.sample
+++ b/settings_local.py.sample
@@ -30,3 +30,11 @@ LOCAL_INSTALLED_APPS = (
 PYMONGOLOG_URI = "mongodb://stats.cualbondi.com.ar/cualbondi?w=0"
 
 PISTON_DISPLAY_ERRORS = False
+
+REQUEST_LOGGING_BACKEND = {
+    'name': 'MongoDB',
+    'host': 'localhost',
+    'port': 27017,
+    'db': 'cualbondi',
+    'collection': 'requests'
+}
