--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
-# Requerimientos python para utilizar Cualbondi
-
-PIL
-Django==1.4
-psycopg2
-python-memcached
-django-olwidget
-django-floppyforms
-django-piston
-django-imagekit
-pymongo
-django-sentry
-South
-
-#django-moderation
+Django==1.4.8
+PIL==1.1.7
+South==0.8.2
+argparse==1.2.1
+django-appconf==0.6
+django-floppyforms==1.1
+django-imagekit==2.0.4
+django-indexer==0.3.0
+django-olwidget==0.60.3
+django-paging==0.2.5
+django-piston==0.2.3
+django-sentry==1.13.5
+django-templatetag-sugar==0.1
+eventlet==0.14.0
+greenlet==0.4.1
+lockfile==0.9.1
+pilkit==1.1.5
+psycopg2==2.5.1
+pymongo==2.6.3
+python-daemon==1.6
+python-memcached==1.53
+raven==3.5.0
+six==1.4.1
+wsgiref==0.1.2
