Mapa estático inicial, para ciudad
Hay que instalar apt-get install pngcrush

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,29 @@
-# Requerimientos python para utilizar Cualbondi
-
-PIL
-Django==1.4
-psycopg2
-python-memcached
-django-olwidget
-django-floppyforms
-django-piston
-django-imagekit
-pymongo
-django-sentry
-South
-
-#django-moderation
+Django==1.4.6
+Ghost.py==0.1b2
+Pillow==2.2.1
+PySide==1.2.1
+South==0.8.2
+argparse==1.2.1
+django-appconf==0.6
+django-floppyforms==1.1
+django-imagekit==2.0
+django-indexer==0.3.0
+django-moderation==0.3.2
+django-olwidget==0.60.3
+django-paging==0.2.5
+django-piston==0.2.3
+django-sentry==1.13.5
+django-templatetag-sugar==0.1
+-e git+https://github.com/djromero/django-thumbs.git@9a4b7d31f40502e07437be7e0b6efbac7523336b#egg=django_thumbs-master
+eventlet==0.14.0
+greenlet==0.4.1
+ipython==0.13.2
+lockfile==0.9.1
+pilkit==0.3.0
+psycopg2==2.5
+pymongo==2.5.2
+python-daemon==1.6
+python-memcached==1.53
+raven==3.3.9
+six==1.4.1
+wsgiref==0.1.2
