--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ PySide==1.2.1
 South==0.8.2
 argparse==1.2.1
 django-appconf==0.6
+django-bootstrap-toolkit==2.15.0
 django-floppyforms==1.1
 django-imagekit==2.0.4
 django-indexer==0.3.0
@@ -14,13 +15,20 @@ django-sentry==1.13.5
 django-templatetag-sugar==0.1
 eventlet==0.14.0
 greenlet==0.4.1
+httplib2==0.8
+ipython==1.1.0
 lockfile==0.9.1
+oauth2==1.5.211
+oauthlib==0.6.1
 pilkit==1.1.5
 psycopg2==2.5.1
 pymongo==2.6.3
 python-daemon==1.6
 python-memcached==1.53
+python-openid==2.2.5
+python-social-auth==0.1.23
 raven==3.5.2
+requests==2.2.1
+requests-oauthlib==0.4.0
 six==1.4.1
 wsgiref==0.1.2
-django-bootstrap-toolkit==2.15.0
