--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-piston==0.2.3
 django-sentry==1.13.5
 django-templatetag-sugar==0.1
 eventlet==0.14.0
+facebook-sdk==0.4.0
 greenlet==0.4.1
 httplib2==0.8
 ipython==1.1.0
