--- a/settings_local.py.sample
+++ b/settings_local.py.sample
@@ -32,7 +32,7 @@ PYMONGOLOG_URI = "mongodb://stats.cualbondi.com.ar/cualbondi?w=0"
 PISTON_DISPLAY_ERRORS = False
 
 REQUEST_LOGGING_BACKEND = {
-    'host': 'server.localhost',
+    'host': 'localhost',
     'port': 9200,
     'index': 'cualbondi',
     'type': 'requests'
