--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-extensions==1.3.7
 django-floppyforms==1.1
 django-imagekit==2.0.4
 django-indexer==0.3.0
+django-leaflet==0.15.2
 django-paging==0.2.5
 django-piston==0.2.3
 django-sentry==1.13.5
