- Ghost image generation on moderation accept to uwsgi queue - Remove logging for now because of too much network traffic

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-Django==1.6.5
-Ghost.py==0.1b2
-Pillow==2.2.1
-PySide==1.2.1
-South==0.8.4
-Werkzeug==0.9.4
-argparse==1.2.1
 cffi==0.8.2
 cryptography==0.4
+Django==1.6.5
 django-appconf==0.6
 django-bootstrap-toolkit==2.15.0
 django-debug-toolbar==1.2
@@ -20,8 +14,10 @@ django-piston==0.2.3
 django-sentry==1.13.5
 django-social-auth==0.7.28
 django-templatetag-sugar==0.1
+elasticsearch==1.1.1
 eventlet==0.14.0
 facebook-sdk==0.4.0
+Ghost.py==0.1b2
 greenlet==0.4.1
 httplib2==0.8
 ipython==1.1.0
@@ -29,10 +25,12 @@ lockfile==0.9.1
 oauth2==1.5.211
 oauthlib==0.6.1
 pilkit==1.1.5
+Pillow==2.2.1
 psycopg2==2.5.1
-pyOpenSSL==0.14
 pycparser==2.10
 pymongo==2.6.3
+pyOpenSSL==0.14
+PySide==1.2.1
 python-daemon==1.6
 python-memcached==1.53
 python-openid==2.2.5
@@ -41,6 +39,8 @@ raven==3.5.2
 requests==2.2.1
 requests-oauthlib==0.4.0
 six==1.6.1
+South==0.8.4
 sqlparse==0.1.11
-wsgiref==0.1.2
-elasticsearch==1.1.1
+urllib3==1.10.2
+uWSGI==2.0.10
+Werkzeug==0.9.4
