--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-piston==0.2.3
 django-sentry==1.13.5
 django-social-auth==0.7.28
 django-templatetag-sugar==0.1
+djangorestframework==3.2.4
 elasticsearch==1.1.1
 eventlet==0.14.0
 facebook-sdk==0.4.0
