[wercker] trying new db conf

--- a/wercker.yml
+++ b/wercker.yml
@@ -4,14 +4,11 @@ services:
    - id: postgres
      env:
        POSTGRES_PASSWORD: cb
+       POSTGRES_USER: cb
+       POSTGRES_DB: cb
 
 build:
   steps:
-
-    - script:
-        name: create database
-        code: |
-          PGPASSWORD=cb psql -h POSTGRES_PORT_5432_TCP_ADDR -p $POSTGRES_PORT_5432_TCP_PORT -U postgres -c 'CREATE DATABASE IF NOT EXISTS cb;'
 
     - virtualenv:
         name: setup virtual environment
