--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,70 @@
-cffi==0.8.2
+cffi==1.2.1
 coverage==4.0.1
-cryptography==0.4
-Django==1.6.5
-django-appconf==0.6
+cryptography==1.0.2
+decorator==4.0.4
+Django==1.8.5
+django-appconf==1.0.1
 django-bootstrap-toolkit==2.15.0
-django-debug-toolbar==1.2
-django-extensions==1.3.7
-django-floppyforms==1.1
-django-imagekit==2.0.4
+django-debug-toolbar==1.4
+django-extensions==1.5.7
+django-floppyforms==1.5.2
+django-imagekit==3.2.7
 django-indexer==0.3.0
-django-leaflet==0.15.2
+django-leaflet==0.16.0
 django-paging==0.2.5
-django-piston==0.2.3
-django-sentry==1.13.5
 django-social-auth==0.7.28
-django-templatetag-sugar==0.1
+django-templatetag-sugar==1.0
 djangorestframework==3.2.4
-elasticsearch==1.1.1
-eventlet==0.14.0
+docutils==0.12
+drf-nested-routers==0.10.0
+elasticsearch==2.1.0
+enum34==1.0.4
+eventlet==0.17.4
 facebook-sdk==0.4.0
-greenlet==0.4.1
-httplib2==0.8
-ipython==1.1.0
-lockfile==0.9.1
+Ghost.py==0.2.3
+greenlet==0.4.9
+httplib2==0.9.2
+idna==2.0
+ipaddress==1.0.14
+ipython==4.0.0
+ipython-genutils==0.1.0
+lockfile==0.11.0
 Markdown==2.6.2
-oauth2==1.5.211
-oauthlib==0.6.1
-pilkit==1.1.5
-Pillow==2.2.1
-psycopg2==2.5.1
-pycparser==2.10
-pymongo==2.6.3
-pyOpenSSL==0.14
-python-daemon==1.6
-python-memcached==1.53
+oauth2==1.9.0.post1
+oauthlib==1.0.3
+path.py==8.1.2
+pbr==0.11.0
+pep8==1.6.2
+pexpect==4.0.1
+pickleshare==0.5
+pilkit==1.1.13
+Pillow==3.0.0
+psycopg2==2.6.1
+ptyprocess==0.5
+pyasn1==0.1.9
+pycparser==2.14
+PyJWT==1.4.0
+pymongo==3.0.3
+pyOpenSSL==0.15.1
+python-daemon==2.0.6
+python-memcached==1.57
 python-openid==2.2.5
-python-social-auth==0.1.23
-raven==3.5.2
-requests==2.2.1
-requests-oauthlib==0.4.0
-six==1.6.1
-South==0.8.4
-sqlparse==0.1.11
-urllib3==1.10.2
-uWSGI==2.0.10
-Werkzeug==0.9.4
+python-social-auth==0.2.13
+raven==5.7.2
+requests==2.8.1
+requests-oauthlib==0.5.0
+simplegeneric==0.8.1
+six==1.10.0
+sqlparse==0.1.16
+traitlets==4.0.0
+urllib3==1.12
+uWSGI==2.0.11.2
+Werkzeug==0.10.4
+wheel==0.24.0
 
-# This two take a lot to build, if you need them uncomment and pip install 'em
-#PySide==1.2.1
-#Ghost.py==0.1b2
+# use a fork that works in django 1.8
+#django-piston==0.2.3
+git+https://github.com/natebeacham/django-piston.git
+
+# This take a lot of time to build, if you need it uncomment and pip install 'em
+#PySide==1.2.4
