--- a/wercker.yml
+++ b/wercker.yml
@@ -25,5 +25,5 @@ build:
     - script:
         name: django test
         code: |
-          coverage run --source='.' manage.py test apps.api2 -v2 --noinput
+          coverage run --source='.' manage.py test apps.api2 -k -v2
           coverage report
