--- a/shippable.yml
+++ b/shippable.yml
@@ -22,5 +22,5 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - coverage run --source='$SHIPPABLE_REPO_DIR' $SHIPPABLE_REPO_DIR/manage.py test apps.api2 -k -v2
+  - coverage run --source=$SHIPPABLE_REPO_DIR $SHIPPABLE_REPO_DIR/manage.py test apps.api2 -k -v2
   - coverage report
