--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-floppyforms==1.5.2
 django-imagekit==3.2.7
 django-indexer==0.3.0
 django-leaflet==0.16.0
+django-nose==1.4.2
 django-paging==0.2.5
 django-social-auth==0.7.28
 django-templatetag-sugar==1.0
@@ -30,6 +31,7 @@ ipython==4.0.0
 ipython-genutils==0.1.0
 lockfile==0.11.0
 Markdown==2.6.2
+nose==1.3.7
 oauth2==1.9.0.post1
 oauthlib==1.0.3
 path.py==8.1.2
