--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ djangorestframework==3.2.4
 djangorestframework-jsonp==1.0.2
 docutils==0.12
 drf-nested-routers==0.10.0
+drf-tracking==0.2.5
 elasticsearch==2.1.0
 enum34==1.0.4
 eventlet==0.17.4
