--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ PyJWT==1.4.0
 pymongo==3.0.3
 pyOpenSSL==0.15.1
 python-daemon==2.0.6
+python-logstash==0.4.6
 python-memcached==1.57
 python-openid==2.2.5
 python-social-auth==0.2.13
