--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-floppyforms==1.5.2
 django-imagekit==3.2.7
 django-indexer==0.3.0
 django-leaflet==0.16.0
+django-log-formatter-json==0.2.0
 django-nose==1.4.2
 django-paging==0.2.5
 django-social-auth==0.7.28
@@ -62,6 +63,7 @@ simplegeneric==0.8.1
 six==1.10.0
 sqlparse==0.1.16
 traitlets==4.0.0
+ujson==1.35
 urllib3==1.12
 uWSGI==2.0.11.2
 Werkzeug==0.10.4
