--- a/requirements.txt
+++ b/requirements.txt
@@ -69,5 +69,8 @@ uWSGI==2.0.11.2
 Werkzeug==0.10.4
 wheel==0.24.0
 
+# django-piston==0.2.3 # use a fork that works in django>=1.8
+git+https://github.com/natebeacham/django-piston.git
+
 # This take a lot of time to build, if you need it uncomment and pip install 'em
 #PySide==1.2.4
